# BitChess

./: CMakeLists.txt  README.md
cmake/: sources.cmake  version.h.in
src/: bitchess.cpp
src/asearch/: asearch.cpp  asearch.h  state.h  ttable.cpp  ttable.h
src/asearch/test/: asearchtest.cpp  asearchtest.h
src/bitboard/: bitboard.cpp  bitboard.h
src/bitboard/test/: bboardtest.cpp  bboardtest.h  main.cpp
src/chess/: cmove.h  cstate.cpp  cstate.h  magics.cpp  magics.h
src/chess/test/: cmovetest.cpp  cmovetest.h  cstatetest.cpp  cstatetest.h  main.cpp  perftest.cpp  perftest.h
src/utils/: debugger.h  random.c  timer.cpp  timer.h  types.h  verbose.cpp  verbose.h
